lab5/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> instructions
Rule 3     instructions_opt -> <empty>
Rule 4     instructions -> instructions instruction
Rule 5     instructions -> instruction
Rule 6     instruction -> { instructions }
Rule 7     instruction -> if
Rule 8     instruction -> loop
Rule 9     instruction -> return ;
Rule 10    instruction -> assignment ;
Rule 11    instruction -> print ;
Rule 12    instruction -> break ;
Rule 13    instruction -> continue ;
Rule 14    break -> BREAK
Rule 15    continue -> CONTINUE
Rule 16    if -> IF ( expression ) instruction
Rule 17    if -> IF ( expression ) instruction ELSE instruction
Rule 18    loop -> for
Rule 19    loop -> while
Rule 20    for -> FOR ID = expression : expression instruction
Rule 21    while -> WHILE ( expression ) instruction
Rule 22    return -> RETURN
Rule 23    return -> RETURN expression
Rule 24    assignment -> assignable assign_operator expression
Rule 25    assign_operator -> =
Rule 26    assign_operator -> ADDASSIGN
Rule 27    assign_operator -> SUBASSIGN
Rule 28    assign_operator -> MULASSIGN
Rule 29    assign_operator -> DIVASSIGN
Rule 30    assignable -> id
Rule 31    assignable -> id [ expression , expression ]
Rule 32    id -> ID
Rule 33    print -> PRINT printable_list
Rule 34    printable_list -> printable_list , printable
Rule 35    printable_list -> printable
Rule 36    printable -> string
Rule 37    printable -> expression
Rule 38    string -> STRING
Rule 39    expression -> int
Rule 40    expression -> float
Rule 41    expression -> assignable
Rule 42    expression -> bracketed
Rule 43    expression -> matrix
Rule 44    expression -> matrix_function
Rule 45    expression -> binary_expr
Rule 46    expression -> uminus
Rule 47    expression -> transposition
Rule 48    bracketed -> ( expression )
Rule 49    int -> INTNUM
Rule 50    float -> FLOATNUM
Rule 51    binary_expr -> expression + expression
Rule 52    binary_expr -> expression - expression
Rule 53    binary_expr -> expression * expression
Rule 54    binary_expr -> expression / expression
Rule 55    binary_expr -> expression DOTADD expression
Rule 56    binary_expr -> expression DOTSUB expression
Rule 57    binary_expr -> expression DOTMUL expression
Rule 58    binary_expr -> expression DOTDIV expression
Rule 59    binary_expr -> expression < expression
Rule 60    binary_expr -> expression > expression
Rule 61    binary_expr -> expression ELESS expression
Rule 62    binary_expr -> expression EGREATER expression
Rule 63    binary_expr -> expression EQUALS expression
Rule 64    binary_expr -> expression NEQUALS expression
Rule 65    uminus -> - expression
Rule 66    transposition -> expression '
Rule 67    matrix -> [ vector_1 ]
Rule 68    vector_1 -> vector_1 , [ vector_2 ]
Rule 69    vector_1 -> [ vector_2 ]
Rule 70    vector_2 -> vector_2 , expression
Rule 71    vector_2 -> expression
Rule 72    matrix_function -> function_name ( expression )
Rule 73    function_name -> EYE
Rule 74    function_name -> ZEROS
Rule 75    function_name -> ONES

Terminals, with rules where they appear

'                    : 66
(                    : 16 17 21 48 72
)                    : 16 17 21 48 72
*                    : 53
+                    : 51
,                    : 31 34 68 70
-                    : 52 65
/                    : 54
:                    : 20
;                    : 9 10 11 12 13
<                    : 59
=                    : 20 25
>                    : 60
ADDASSIGN            : 26
BREAK                : 14
CONTINUE             : 15
DIVASSIGN            : 29
DOTADD               : 55
DOTDIV               : 58
DOTMUL               : 57
DOTSUB               : 56
EGREATER             : 62
ELESS                : 61
ELSE                 : 17
EQUALS               : 63
EYE                  : 73
FLOATNUM             : 50
FOR                  : 20
ID                   : 20 32
IF                   : 16 17
INTNUM               : 49
MULASSIGN            : 28
NEQUALS              : 64
ONES                 : 75
PRINT                : 33
RETURN               : 22 23
STRING               : 38
SUBASSIGN            : 27
WHILE                : 21
ZEROS                : 74
[                    : 31 67 68 69
]                    : 31 67 68 69
error                : 
{                    : 6
}                    : 6

Nonterminals, with rules where they appear

assign_operator      : 24
assignable           : 24 41
assignment           : 10
binary_expr          : 45
bracketed            : 42
break                : 12
continue             : 13
expression           : 16 17 20 20 21 23 24 31 31 37 48 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 66 70 71 72
float                : 40
for                  : 18
function_name        : 72
id                   : 30 31
if                   : 7
instruction          : 4 5 16 17 17 20 21
instructions         : 2 4 6
instructions_opt     : 1
int                  : 39
loop                 : 8
matrix               : 43
matrix_function      : 44
print                : 11
printable            : 34 35
printable_list       : 33 34
program              : 0
return               : 9
string               : 36
transposition        : 47
uminus               : 46
vector_1             : 67 68
vector_2             : 68 69 70
while                : 19

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> . instructions
    (3) instructions_opt -> .
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . if
    (8) instruction -> . loop
    (9) instruction -> . return ;
    (10) instruction -> . assignment ;
    (11) instruction -> . print ;
    (12) instruction -> . break ;
    (13) instruction -> . continue ;
    (16) if -> . IF ( expression ) instruction
    (17) if -> . IF ( expression ) instruction ELSE instruction
    (18) loop -> . for
    (19) loop -> . while
    (22) return -> . RETURN
    (23) return -> . RETURN expression
    (24) assignment -> . assignable assign_operator expression
    (33) print -> . PRINT printable_list
    (14) break -> . BREAK
    (15) continue -> . CONTINUE
    (20) for -> . FOR ID = expression : expression instruction
    (21) while -> . WHILE ( expression ) instruction
    (30) assignable -> . id
    (31) assignable -> . id [ expression , expression ]
    (32) id -> . ID

    $end            reduce using rule 3 (instructions_opt -> .)
    {               shift and go to state 5
    IF              shift and go to state 13
    RETURN          shift and go to state 16
    PRINT           shift and go to state 18
    BREAK           shift and go to state 19
    CONTINUE        shift and go to state 20
    FOR             shift and go to state 21
    WHILE           shift and go to state 23
    ID              shift and go to state 22

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    if                             shift and go to state 6
    loop                           shift and go to state 7
    return                         shift and go to state 8
    assignment                     shift and go to state 9
    print                          shift and go to state 10
    break                          shift and go to state 11
    continue                       shift and go to state 12
    for                            shift and go to state 14
    while                          shift and go to state 15
    assignable                     shift and go to state 17
    id                             shift and go to state 24

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (2) instructions_opt -> instructions .
    (4) instructions -> instructions . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . if
    (8) instruction -> . loop
    (9) instruction -> . return ;
    (10) instruction -> . assignment ;
    (11) instruction -> . print ;
    (12) instruction -> . break ;
    (13) instruction -> . continue ;
    (16) if -> . IF ( expression ) instruction
    (17) if -> . IF ( expression ) instruction ELSE instruction
    (18) loop -> . for
    (19) loop -> . while
    (22) return -> . RETURN
    (23) return -> . RETURN expression
    (24) assignment -> . assignable assign_operator expression
    (33) print -> . PRINT printable_list
    (14) break -> . BREAK
    (15) continue -> . CONTINUE
    (20) for -> . FOR ID = expression : expression instruction
    (21) while -> . WHILE ( expression ) instruction
    (30) assignable -> . id
    (31) assignable -> . id [ expression , expression ]
    (32) id -> . ID

    $end            reduce using rule 2 (instructions_opt -> instructions .)
    {               shift and go to state 5
    IF              shift and go to state 13
    RETURN          shift and go to state 16
    PRINT           shift and go to state 18
    BREAK           shift and go to state 19
    CONTINUE        shift and go to state 20
    FOR             shift and go to state 21
    WHILE           shift and go to state 23
    ID              shift and go to state 22

    instruction                    shift and go to state 25
    if                             shift and go to state 6
    loop                           shift and go to state 7
    return                         shift and go to state 8
    assignment                     shift and go to state 9
    print                          shift and go to state 10
    break                          shift and go to state 11
    continue                       shift and go to state 12
    for                            shift and go to state 14
    while                          shift and go to state 15
    assignable                     shift and go to state 17
    id                             shift and go to state 24

state 4

    (5) instructions -> instruction .

    {               reduce using rule 5 (instructions -> instruction .)
    IF              reduce using rule 5 (instructions -> instruction .)
    RETURN          reduce using rule 5 (instructions -> instruction .)
    PRINT           reduce using rule 5 (instructions -> instruction .)
    BREAK           reduce using rule 5 (instructions -> instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instruction .)
    FOR             reduce using rule 5 (instructions -> instruction .)
    WHILE           reduce using rule 5 (instructions -> instruction .)
    ID              reduce using rule 5 (instructions -> instruction .)
    $end            reduce using rule 5 (instructions -> instruction .)
    }               reduce using rule 5 (instructions -> instruction .)


state 5

    (6) instruction -> { . instructions }
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . if
    (8) instruction -> . loop
    (9) instruction -> . return ;
    (10) instruction -> . assignment ;
    (11) instruction -> . print ;
    (12) instruction -> . break ;
    (13) instruction -> . continue ;
    (16) if -> . IF ( expression ) instruction
    (17) if -> . IF ( expression ) instruction ELSE instruction
    (18) loop -> . for
    (19) loop -> . while
    (22) return -> . RETURN
    (23) return -> . RETURN expression
    (24) assignment -> . assignable assign_operator expression
    (33) print -> . PRINT printable_list
    (14) break -> . BREAK
    (15) continue -> . CONTINUE
    (20) for -> . FOR ID = expression : expression instruction
    (21) while -> . WHILE ( expression ) instruction
    (30) assignable -> . id
    (31) assignable -> . id [ expression , expression ]
    (32) id -> . ID

    {               shift and go to state 5
    IF              shift and go to state 13
    RETURN          shift and go to state 16
    PRINT           shift and go to state 18
    BREAK           shift and go to state 19
    CONTINUE        shift and go to state 20
    FOR             shift and go to state 21
    WHILE           shift and go to state 23
    ID              shift and go to state 22

    instructions                   shift and go to state 26
    instruction                    shift and go to state 4
    if                             shift and go to state 6
    loop                           shift and go to state 7
    return                         shift and go to state 8
    assignment                     shift and go to state 9
    print                          shift and go to state 10
    break                          shift and go to state 11
    continue                       shift and go to state 12
    for                            shift and go to state 14
    while                          shift and go to state 15
    assignable                     shift and go to state 17
    id                             shift and go to state 24

state 6

    (7) instruction -> if .

    {               reduce using rule 7 (instruction -> if .)
    IF              reduce using rule 7 (instruction -> if .)
    RETURN          reduce using rule 7 (instruction -> if .)
    PRINT           reduce using rule 7 (instruction -> if .)
    BREAK           reduce using rule 7 (instruction -> if .)
    CONTINUE        reduce using rule 7 (instruction -> if .)
    FOR             reduce using rule 7 (instruction -> if .)
    WHILE           reduce using rule 7 (instruction -> if .)
    ID              reduce using rule 7 (instruction -> if .)
    $end            reduce using rule 7 (instruction -> if .)
    }               reduce using rule 7 (instruction -> if .)
    ELSE            reduce using rule 7 (instruction -> if .)


state 7

    (8) instruction -> loop .

    {               reduce using rule 8 (instruction -> loop .)
    IF              reduce using rule 8 (instruction -> loop .)
    RETURN          reduce using rule 8 (instruction -> loop .)
    PRINT           reduce using rule 8 (instruction -> loop .)
    BREAK           reduce using rule 8 (instruction -> loop .)
    CONTINUE        reduce using rule 8 (instruction -> loop .)
    FOR             reduce using rule 8 (instruction -> loop .)
    WHILE           reduce using rule 8 (instruction -> loop .)
    ID              reduce using rule 8 (instruction -> loop .)
    $end            reduce using rule 8 (instruction -> loop .)
    }               reduce using rule 8 (instruction -> loop .)
    ELSE            reduce using rule 8 (instruction -> loop .)


state 8

    (9) instruction -> return . ;

    ;               shift and go to state 27


state 9

    (10) instruction -> assignment . ;

    ;               shift and go to state 28


state 10

    (11) instruction -> print . ;

    ;               shift and go to state 29


state 11

    (12) instruction -> break . ;

    ;               shift and go to state 30


state 12

    (13) instruction -> continue . ;

    ;               shift and go to state 31


state 13

    (16) if -> IF . ( expression ) instruction
    (17) if -> IF . ( expression ) instruction ELSE instruction

    (               shift and go to state 32


state 14

    (18) loop -> for .

    {               reduce using rule 18 (loop -> for .)
    IF              reduce using rule 18 (loop -> for .)
    RETURN          reduce using rule 18 (loop -> for .)
    PRINT           reduce using rule 18 (loop -> for .)
    BREAK           reduce using rule 18 (loop -> for .)
    CONTINUE        reduce using rule 18 (loop -> for .)
    FOR             reduce using rule 18 (loop -> for .)
    WHILE           reduce using rule 18 (loop -> for .)
    ID              reduce using rule 18 (loop -> for .)
    $end            reduce using rule 18 (loop -> for .)
    }               reduce using rule 18 (loop -> for .)
    ELSE            reduce using rule 18 (loop -> for .)


state 15

    (19) loop -> while .

    {               reduce using rule 19 (loop -> while .)
    IF              reduce using rule 19 (loop -> while .)
    RETURN          reduce using rule 19 (loop -> while .)
    PRINT           reduce using rule 19 (loop -> while .)
    BREAK           reduce using rule 19 (loop -> while .)
    CONTINUE        reduce using rule 19 (loop -> while .)
    FOR             reduce using rule 19 (loop -> while .)
    WHILE           reduce using rule 19 (loop -> while .)
    ID              reduce using rule 19 (loop -> while .)
    $end            reduce using rule 19 (loop -> while .)
    }               reduce using rule 19 (loop -> while .)
    ELSE            reduce using rule 19 (loop -> while .)


state 16

    (22) return -> RETURN .
    (23) return -> RETURN . expression
    (39) expression -> . int
    (40) expression -> . float
    (41) expression -> . assignable
    (42) expression -> . bracketed
    (43) expression -> . matrix
    (44) expression -> . matrix_function
    (45) expression -> . binary_expr
    (46) expression -> . uminus
    (47) expression -> . transposition
    (49) int -> . INTNUM
    (50) float -> . FLOATNUM
    (30) assignable -> . id
    (31) assignable -> . id [ expression , expression ]
    (48) bracketed -> . ( expression )
    (67) matrix -> . [ vector_1 ]
    (72) matrix_function -> . function_name ( expression )
    (51) binary_expr -> . expression + expression
    (52) binary_expr -> . expression - expression
    (53) binary_expr -> . expression * expression
    (54) binary_expr -> . expression / expression
    (55) binary_expr -> . expression DOTADD expression
    (56) binary_expr -> . expression DOTSUB expression
    (57) binary_expr -> . expression DOTMUL expression
    (58) binary_expr -> . expression DOTDIV expression
    (59) binary_expr -> . expression < expression
    (60) binary_expr -> . expression > expression
    (61) binary_expr -> . expression ELESS expression
    (62) binary_expr -> . expression EGREATER expression
    (63) binary_expr -> . expression EQUALS expression
    (64) binary_expr -> . expression NEQUALS expression
    (65) uminus -> . - expression
    (66) transposition -> . expression '
    (32) id -> . ID
    (73) function_name -> . EYE
    (74) function_name -> . ZEROS
    (75) function_name -> . ONES

    ;               reduce using rule 22 (return -> RETURN .)
    INTNUM          shift and go to state 43
    FLOATNUM        shift and go to state 44
    (               shift and go to state 46
    [               shift and go to state 45
    -               shift and go to state 48
    ID              shift and go to state 22
    EYE             shift and go to state 49
    ZEROS           shift and go to state 50
    ONES            shift and go to state 51

    expression                     shift and go to state 33
    int                            shift and go to state 34
    float                          shift and go to state 35
    assignable                     shift and go to state 36
    bracketed                      shift and go to state 37
    matrix                         shift and go to state 38
    matrix_function                shift and go to state 39
    binary_expr                    shift and go to state 40
    uminus                         shift and go to state 41
    transposition                  shift and go to state 42
    id                             shift and go to state 24
    function_name                  shift and go to state 47

state 17

    (24) assignment -> assignable . assign_operator expression
    (25) assign_operator -> . =
    (26) assign_operator -> . ADDASSIGN
    (27) assign_operator -> . SUBASSIGN
    (28) assign_operator -> . MULASSIGN
    (29) assign_operator -> . DIVASSIGN

    =               shift and go to state 53
    ADDASSIGN       shift and go to state 54
    SUBASSIGN       shift and go to state 55
    MULASSIGN       shift and go to state 56
    DIVASSIGN       shift and go to state 57

    assign_operator                shift and go to state 52

state 18

    (33) print -> PRINT . printable_list
    (34) printable_list -> . printable_list , printable
    (35) printable_list -> . printable
    (36) printable -> . string
    (37) printable -> . expression
    (38) string -> . STRING
    (39) expression -> . int
    (40) expression -> . float
    (41) expression -> . assignable
    (42) expression -> . bracketed
    (43) expression -> . matrix
    (44) expression -> . matrix_function
    (45) expression -> . binary_expr
    (46) expression -> . uminus
    (47) expression -> . transposition
    (49) int -> . INTNUM
    (50) float -> . FLOATNUM
    (30) assignable -> . id
    (31) assignable -> . id [ expression , expression ]
    (48) bracketed -> . ( expression )
    (67) matrix -> . [ vector_1 ]
    (72) matrix_function -> . function_name ( expression )
    (51) binary_expr -> . expression + expression
    (52) binary_expr -> . expression - expression
    (53) binary_expr -> . expression * expression
    (54) binary_expr -> . expression / expression
    (55) binary_expr -> . expression DOTADD expression
    (56) binary_expr -> . expression DOTSUB expression
    (57) binary_expr -> . expression DOTMUL expression
    (58) binary_expr -> . expression DOTDIV expression
    (59) binary_expr -> . expression < expression
    (60) binary_expr -> . expression > expression
    (61) binary_expr -> . expression ELESS expression
    (62) binary_expr -> . expression EGREATER expression
    (63) binary_expr -> . expression EQUALS expression
    (64) binary_expr -> . expression NEQUALS expression
    (65) uminus -> . - expression
    (66) transposition -> . expression '
    (32) id -> . ID
    (73) function_name -> . EYE
    (74) function_name -> . ZEROS
    (75) function_name -> . ONES

    STRING          shift and go to state 62
    INTNUM          shift and go to state 43
    FLOATNUM        shift and go to state 44
    (               shift and go to state 46
    [               shift and go to state 45
    -               shift and go to state 48
    ID              shift and go to state 22
    EYE             shift and go to state 49
    ZEROS           shift and go to state 50
    ONES            shift and go to state 51

    printable_list                 shift and go to state 58
    printable                      shift and go to state 59
    string                         shift and go to state 60
    expression                     shift and go to state 61
    int                            shift and go to state 34
    float                          shift and go to state 35
    assignable                     shift and go to state 36
    bracketed                      shift and go to state 37
    matrix                         shift and go to state 38
    matrix_function                shift and go to state 39
    binary_expr                    shift and go to state 40
    uminus                         shift and go to state 41
    transposition                  shift and go to state 42
    id                             shift and go to state 24
    function_name                  shift and go to state 47

state 19

    (14) break -> BREAK .

    ;               reduce using rule 14 (break -> BREAK .)


state 20

    (15) continue -> CONTINUE .

    ;               reduce using rule 15 (continue -> CONTINUE .)


state 21

    (20) for -> FOR . ID = expression : expression instruction

    ID              shift and go to state 63


state 22

    (32) id -> ID .

    [               reduce using rule 32 (id -> ID .)
    =               reduce using rule 32 (id -> ID .)
    ADDASSIGN       reduce using rule 32 (id -> ID .)
    SUBASSIGN       reduce using rule 32 (id -> ID .)
    MULASSIGN       reduce using rule 32 (id -> ID .)
    DIVASSIGN       reduce using rule 32 (id -> ID .)
    +               reduce using rule 32 (id -> ID .)
    -               reduce using rule 32 (id -> ID .)
    *               reduce using rule 32 (id -> ID .)
    /               reduce using rule 32 (id -> ID .)
    DOTADD          reduce using rule 32 (id -> ID .)
    DOTSUB          reduce using rule 32 (id -> ID .)
    DOTMUL          reduce using rule 32 (id -> ID .)
    DOTDIV          reduce using rule 32 (id -> ID .)
    <               reduce using rule 32 (id -> ID .)
    >               reduce using rule 32 (id -> ID .)
    ELESS           reduce using rule 32 (id -> ID .)
    EGREATER        reduce using rule 32 (id -> ID .)
    EQUALS          reduce using rule 32 (id -> ID .)
    NEQUALS         reduce using rule 32 (id -> ID .)
    '               reduce using rule 32 (id -> ID .)
    ;               reduce using rule 32 (id -> ID .)
    ,               reduce using rule 32 (id -> ID .)
    )               reduce using rule 32 (id -> ID .)
    ]               reduce using rule 32 (id -> ID .)
    :               reduce using rule 32 (id -> ID .)
    {               reduce using rule 32 (id -> ID .)
    IF              reduce using rule 32 (id -> ID .)
    RETURN          reduce using rule 32 (id -> ID .)
    PRINT           reduce using rule 32 (id -> ID .)
    BREAK           reduce using rule 32 (id -> ID .)
    CONTINUE        reduce using rule 32 (id -> ID .)
    FOR             reduce using rule 32 (id -> ID .)
    WHILE           reduce using rule 32 (id -> ID .)
    ID              reduce using rule 32 (id -> ID .)


state 23

    (21) while -> WHILE . ( expression ) instruction

    (               shift and go to state 64


state 24

    (30) assignable -> id .
    (31) assignable -> id . [ expression , expression ]

    =               reduce using rule 30 (assignable -> id .)
    ADDASSIGN       reduce using rule 30 (assignable -> id .)
    SUBASSIGN       reduce using rule 30 (assignable -> id .)
    MULASSIGN       reduce using rule 30 (assignable -> id .)
    DIVASSIGN       reduce using rule 30 (assignable -> id .)
    +               reduce using rule 30 (assignable -> id .)
    -               reduce using rule 30 (assignable -> id .)
    *               reduce using rule 30 (assignable -> id .)
    /               reduce using rule 30 (assignable -> id .)
    DOTADD          reduce using rule 30 (assignable -> id .)
    DOTSUB          reduce using rule 30 (assignable -> id .)
    DOTMUL          reduce using rule 30 (assignable -> id .)
    DOTDIV          reduce using rule 30 (assignable -> id .)
    <               reduce using rule 30 (assignable -> id .)
    >               reduce using rule 30 (assignable -> id .)
    ELESS           reduce using rule 30 (assignable -> id .)
    EGREATER        reduce using rule 30 (assignable -> id .)
    EQUALS          reduce using rule 30 (assignable -> id .)
    NEQUALS         reduce using rule 30 (assignable -> id .)
    '               reduce using rule 30 (assignable -> id .)
    ;               reduce using rule 30 (assignable -> id .)
    ,               reduce using rule 30 (assignable -> id .)
    )               reduce using rule 30 (assignable -> id .)
    ]               reduce using rule 30 (assignable -> id .)
    :               reduce using rule 30 (assignable -> id .)
    {               reduce using rule 30 (assignable -> id .)
    IF              reduce using rule 30 (assignable -> id .)
    RETURN          reduce using rule 30 (assignable -> id .)
    PRINT           reduce using rule 30 (assignable -> id .)
    BREAK           reduce using rule 30 (assignable -> id .)
    CONTINUE        reduce using rule 30 (assignable -> id .)
    FOR             reduce using rule 30 (assignable -> id .)
    WHILE           reduce using rule 30 (assignable -> id .)
    ID              reduce using rule 30 (assignable -> id .)
    [               shift and go to state 65


state 25

    (4) instructions -> instructions instruction .

    {               reduce using rule 4 (instructions -> instructions instruction .)
    IF              reduce using rule 4 (instructions -> instructions instruction .)
    RETURN          reduce using rule 4 (instructions -> instructions instruction .)
    PRINT           reduce using rule 4 (instructions -> instructions instruction .)
    BREAK           reduce using rule 4 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instructions instruction .)
    FOR             reduce using rule 4 (instructions -> instructions instruction .)
    WHILE           reduce using rule 4 (instructions -> instructions instruction .)
    ID              reduce using rule 4 (instructions -> instructions instruction .)
    $end            reduce using rule 4 (instructions -> instructions instruction .)
    }               reduce using rule 4 (instructions -> instructions instruction .)


state 26

    (6) instruction -> { instructions . }
    (4) instructions -> instructions . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . if
    (8) instruction -> . loop
    (9) instruction -> . return ;
    (10) instruction -> . assignment ;
    (11) instruction -> . print ;
    (12) instruction -> . break ;
    (13) instruction -> . continue ;
    (16) if -> . IF ( expression ) instruction
    (17) if -> . IF ( expression ) instruction ELSE instruction
    (18) loop -> . for
    (19) loop -> . while
    (22) return -> . RETURN
    (23) return -> . RETURN expression
    (24) assignment -> . assignable assign_operator expression
    (33) print -> . PRINT printable_list
    (14) break -> . BREAK
    (15) continue -> . CONTINUE
    (20) for -> . FOR ID = expression : expression instruction
    (21) while -> . WHILE ( expression ) instruction
    (30) assignable -> . id
    (31) assignable -> . id [ expression , expression ]
    (32) id -> . ID

    }               shift and go to state 66
    {               shift and go to state 5
    IF              shift and go to state 13
    RETURN          shift and go to state 16
    PRINT           shift and go to state 18
    BREAK           shift and go to state 19
    CONTINUE        shift and go to state 20
    FOR             shift and go to state 21
    WHILE           shift and go to state 23
    ID              shift and go to state 22

    instruction                    shift and go to state 25
    if                             shift and go to state 6
    loop                           shift and go to state 7
    return                         shift and go to state 8
    assignment                     shift and go to state 9
    print                          shift and go to state 10
    break                          shift and go to state 11
    continue                       shift and go to state 12
    for                            shift and go to state 14
    while                          shift and go to state 15
    assignable                     shift and go to state 17
    id                             shift and go to state 24

state 27

    (9) instruction -> return ; .

    {               reduce using rule 9 (instruction -> return ; .)
    IF              reduce using rule 9 (instruction -> return ; .)
    RETURN          reduce using rule 9 (instruction -> return ; .)
    PRINT           reduce using rule 9 (instruction -> return ; .)
    BREAK           reduce using rule 9 (instruction -> return ; .)
    CONTINUE        reduce using rule 9 (instruction -> return ; .)
    FOR             reduce using rule 9 (instruction -> return ; .)
    WHILE           reduce using rule 9 (instruction -> return ; .)
    ID              reduce using rule 9 (instruction -> return ; .)
    $end            reduce using rule 9 (instruction -> return ; .)
    }               reduce using rule 9 (instruction -> return ; .)
    ELSE            reduce using rule 9 (instruction -> return ; .)


state 28

    (10) instruction -> assignment ; .

    {               reduce using rule 10 (instruction -> assignment ; .)
    IF              reduce using rule 10 (instruction -> assignment ; .)
    RETURN          reduce using rule 10 (instruction -> assignment ; .)
    PRINT           reduce using rule 10 (instruction -> assignment ; .)
    BREAK           reduce using rule 10 (instruction -> assignment ; .)
    CONTINUE        reduce using rule 10 (instruction -> assignment ; .)
    FOR             reduce using rule 10 (instruction -> assignment ; .)
    WHILE           reduce using rule 10 (instruction -> assignment ; .)
    ID              reduce using rule 10 (instruction -> assignment ; .)
    $end            reduce using rule 10 (instruction -> assignment ; .)
    }               reduce using rule 10 (instruction -> assignment ; .)
    ELSE            reduce using rule 10 (instruction -> assignment ; .)


state 29

    (11) instruction -> print ; .

    {               reduce using rule 11 (instruction -> print ; .)
    IF              reduce using rule 11 (instruction -> print ; .)
    RETURN          reduce using rule 11 (instruction -> print ; .)
    PRINT           reduce using rule 11 (instruction -> print ; .)
    BREAK           reduce using rule 11 (instruction -> print ; .)
    CONTINUE        reduce using rule 11 (instruction -> print ; .)
    FOR             reduce using rule 11 (instruction -> print ; .)
    WHILE           reduce using rule 11 (instruction -> print ; .)
    ID              reduce using rule 11 (instruction -> print ; .)
    $end            reduce using rule 11 (instruction -> print ; .)
    }               reduce using rule 11 (instruction -> print ; .)
    ELSE            reduce using rule 11 (instruction -> print ; .)


state 30

    (12) instruction -> break ; .

    {               reduce using rule 12 (instruction -> break ; .)
    IF              reduce using rule 12 (instruction -> break ; .)
    RETURN          reduce using rule 12 (instruction -> break ; .)
    PRINT           reduce using rule 12 (instruction -> break ; .)
    BREAK           reduce using rule 12 (instruction -> break ; .)
    CONTINUE        reduce using rule 12 (instruction -> break ; .)
    FOR             reduce using rule 12 (instruction -> break ; .)
    WHILE           reduce using rule 12 (instruction -> break ; .)
    ID              reduce using rule 12 (instruction -> break ; .)
    $end            reduce using rule 12 (instruction -> break ; .)
    }               reduce using rule 12 (instruction -> break ; .)
    ELSE            reduce using rule 12 (instruction -> break ; .)


state 31

    (13) instruction -> continue ; .

    {               reduce using rule 13 (instruction -> continue ; .)
    IF              reduce using rule 13 (instruction -> continue ; .)
    RETURN          reduce using rule 13 (instruction -> continue ; .)
    PRINT           reduce using rule 13 (instruction -> continue ; .)
    BREAK           reduce using rule 13 (instruction -> continue ; .)
    CONTINUE        reduce using rule 13 (instruction -> continue ; .)
    FOR             reduce using rule 13 (instruction -> continue ; .)
    WHILE           reduce using rule 13 (instruction -> continue ; .)
    ID              reduce using rule 13 (instruction -> continue ; .)
    $end            reduce using rule 13 (instruction -> continue ; .)
    }               reduce using rule 13 (instruction -> continue ; .)
    ELSE            reduce using rule 13 (instruction -> continue ; .)


state 32

    (16) if -> IF ( . expression ) instruction
    (17) if -> IF ( . expression ) instruction ELSE instruction
    (39) expression -> . int
    (40) expression -> . float
    (41) expression -> . assignable
    (42) expression -> . bracketed
    (43) expression -> . matrix
    (44) expression -> . matrix_function
    (45) expression -> . binary_expr
    (46) expression -> . uminus
    (47) expression -> . transposition
    (49) int -> . INTNUM
    (50) float -> . FLOATNUM
    (30) assignable -> . id
    (31) assignable -> . id [ expression , expression ]
    (48) bracketed -> . ( expression )
    (67) matrix -> . [ vector_1 ]
    (72) matrix_function -> . function_name ( expression )
    (51) binary_expr -> . expression + expression
    (52) binary_expr -> . expression - expression
    (53) binary_expr -> . expression * expression
    (54) binary_expr -> . expression / expression
    (55) binary_expr -> . expression DOTADD expression
    (56) binary_expr -> . expression DOTSUB expression
    (57) binary_expr -> . expression DOTMUL expression
    (58) binary_expr -> . expression DOTDIV expression
    (59) binary_expr -> . expression < expression
    (60) binary_expr -> . expression > expression
    (61) binary_expr -> . expression ELESS expression
    (62) binary_expr -> . expression EGREATER expression
    (63) binary_expr -> . expression EQUALS expression
    (64) binary_expr -> . expression NEQUALS expression
    (65) uminus -> . - expression
    (66) transposition -> . expression '
    (32) id -> . ID
    (73) function_name -> . EYE
    (74) function_name -> . ZEROS
    (75) function_name -> . ONES

    INTNUM          shift and go to state 43
    FLOATNUM        shift and go to state 44
    (               shift and go to state 46
    [               shift and go to state 45
    -               shift and go to state 48
    ID              shift and go to state 22
    EYE             shift and go to state 49
    ZEROS           shift and go to state 50
    ONES            shift and go to state 51

    expression                     shift and go to state 67
    int                            shift and go to state 34
    float                          shift and go to state 35
    assignable                     shift and go to state 36
    bracketed                      shift and go to state 37
    matrix                         shift and go to state 38
    matrix_function                shift and go to state 39
    binary_expr                    shift and go to state 40
    uminus                         shift and go to state 41
    transposition                  shift and go to state 42
    id                             shift and go to state 24
    function_name                  shift and go to state 47

state 33

    (23) return -> RETURN expression .
    (51) binary_expr -> expression . + expression
    (52) binary_expr -> expression . - expression
    (53) binary_expr -> expression . * expression
    (54) binary_expr -> expression . / expression
    (55) binary_expr -> expression . DOTADD expression
    (56) binary_expr -> expression . DOTSUB expression
    (57) binary_expr -> expression . DOTMUL expression
    (58) binary_expr -> expression . DOTDIV expression
    (59) binary_expr -> expression . < expression
    (60) binary_expr -> expression . > expression
    (61) binary_expr -> expression . ELESS expression
    (62) binary_expr -> expression . EGREATER expression
    (63) binary_expr -> expression . EQUALS expression
    (64) binary_expr -> expression . NEQUALS expression
    (66) transposition -> expression . '

    ;               reduce using rule 23 (return -> RETURN expression .)
    +               shift and go to state 68
    -               shift and go to state 69
    *               shift and go to state 70
    /               shift and go to state 71
    DOTADD          shift and go to state 72
    DOTSUB          shift and go to state 73
    DOTMUL          shift and go to state 74
    DOTDIV          shift and go to state 75
    <               shift and go to state 76
    >               shift and go to state 77
    ELESS           shift and go to state 78
    EGREATER        shift and go to state 79
    EQUALS          shift and go to state 80
    NEQUALS         shift and go to state 81
    '               shift and go to state 82


state 34
